--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --projects ./src/test --runInBand",
+    "debug": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,13 +13,16 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "ts-jest": "^28.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
     "eslint": "^8.19.0",
+    "jest": "^28.1.2",
     "nodemon": "^2.0.18",
     "sucrase": "^3.23.0",
     "typescript": "^4.7.4"
