--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,10 @@ FROM node:16-alpine
 
 WORKDIR /app/backend
 
-COPY . ./app/backend
+COPY . /app/backend
 
 RUN npm install
 
-COPY . ./app/backend
+COPY . /app/backend
 
 CMD [ "npm", "run", "debug" ]
