--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "ts-jest": "^28.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
