--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --projects ./src/test --runInBand",
+    "up:server": "docker exec -it ebytr_api bash",
     "debug": "nodemon src/server.ts"
   },
   "keywords": [],
